# gdictcn

gdictcn/: Makefile.in  configure  configure.ac
gdictcn/pixmaps/: Makefile.am  Makefile.in
gdictcn/po/: POTFILES.in  gdictcn.pot  zh_CN.gmo  zh_CN.po
gdictcn/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  dictcn.c  dictcn.h  i18n.h  interface.c  interface.h  main.c  parsexml.c
gtk-terminal/: ChangeLog  README  TODO  config.h.in  configure  configure.ac
gtk-terminal/po/: POTFILES.in  gtk-terminal.pot  zh_CN.gmo  zh_CN.po
gtk-terminal/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  font.c  gtk-terminal.h  i18n.h  main.c  menu.c  menu.h  rcfile.c  rcfile.h  util.c  util.h  window.c  window.h
